backup/iptables_20250801_222539.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Aug  1 22:25:39 2025
*filter
:INPUT ACCEPT [95648:42439785]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -i eno1 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 192.168.11.0/24 -j ACCEPT
-A FORWARD -d 192.168.11.0/24 -j ACCEPT
-A FORWARD -s 192.168.12.0/24 -j ACCEPT
-A FORWARD -d 192.168.12.0/24 -j ACCEPT
-A FORWARD -s 192.168.13.0/24 -j ACCEPT
-A FORWARD -d 192.168.13.0/24 -j ACCEPT
-A FORWARD -s 192.168.14.0/24 -j ACCEPT
-A FORWARD -d 192.168.14.0/24 -j ACCEPT
-A FORWARD -s 192.168.15.0/24 -j ACCEPT
-A FORWARD -d 192.168.15.0/24 -j ACCEPT
-A FORWARD -s 192.168.16.0/24 -j ACCEPT
-A FORWARD -d 192.168.16.0/24 -j ACCEPT
-A FORWARD -s 192.168.17.0/24 -j ACCEPT
-A FORWARD -d 192.168.17.0/24 -j ACCEPT
-A FORWARD -s 192.168.18.0/24 -j ACCEPT
-A FORWARD -d 192.168.18.0/24 -j ACCEPT
-A FORWARD -s 192.168.19.0/24 -j ACCEPT
-A FORWARD -d 192.168.19.0/24 -j ACCEPT
-A FORWARD -s 192.168.20.0/24 -j ACCEPT
-A FORWARD -d 192.168.20.0/24 -j ACCEPT
-A FORWARD -s 192.168.21.0/24 -j ACCEPT
-A FORWARD -d 192.168.21.0/24 -j ACCEPT
-A FORWARD -s 192.168.22.0/24 -j ACCEPT
-A FORWARD -d 192.168.22.0/24 -j ACCEPT
-A FORWARD -s 192.168.23.0/24 -j ACCEPT
-A FORWARD -d 192.168.23.0/24 -j ACCEPT
-A FORWARD -s 192.168.24.0/24 -j ACCEPT
-A FORWARD -d 192.168.24.0/24 -j ACCEPT
-A FORWARD -s 192.168.25.0/24 -j ACCEPT
-A FORWARD -d 192.168.25.0/24 -j ACCEPT
-A FORWARD -s 192.168.26.0/24 -j ACCEPT
-A FORWARD -d 192.168.26.0/24 -j ACCEPT
-A FORWARD -s 192.168.27.0/24 -j ACCEPT
-A FORWARD -d 192.168.27.0/24 -j ACCEPT
-A FORWARD -s 192.168.28.0/24 -j ACCEPT
-A FORWARD -d 192.168.28.0/24 -j ACCEPT
-A FORWARD -s 192.168.29.0/24 -j ACCEPT
-A FORWARD -d 192.168.29.0/24 -j ACCEPT
-A FORWARD -s 192.168.30.0/24 -j ACCEPT
-A FORWARD -d 192.168.30.0/24 -j ACCEPT
COMMIT
# Completed on Fri Aug  1 22:25:39 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Fri Aug  1 22:25:39 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [20:1200]
-A POSTROUTING -o eno1 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u4u4 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u4u1 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u4u2 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u4u3 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u1u4 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u1u1 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u1u2 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u1u3 -j MASQUERADE
-A POSTROUTING -o enp0s21f0u3u2 -j MASQUERADE
COMMIT
# Completed on Fri Aug  1 22:25:39 2025
